Added contact page

--- a/public/success.html
+++ b/public/success.html
@@ -3,6 +3,11 @@
 <head>
  <meta charset="UTF-8">
  <title>Registration Successful</title>
+ <body>
+    <h1>Welcome</h1>
+    <a href="contact.html">Contact</a>
+</body>
+
  <style>
  body {
  font-family: Arial;
